crates/swc_ecma_parser/tests/test262-error-references/fail/525c5220320e32ee.js.stderr
error: Expected a semicolon
 --> $DIR/tests/test262-parser/fail/525c5220320e32ee.js:1:8
  |
1 | try { }
  |        ^

